--- a/page52.html
+++ b/page52.html
@@ -40,7 +40,7 @@
 <!-- /Google Analytics -->
 
 
-  <section id="menu-gv" data-rv-view="1159">
+  <section id="menu-gv" data-rv-view="1181">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/d">best free web page software</a></section><section class="mbr-section extMsg-box1 tab-content mbr-after-navbar" id="extMsg-box1-gy" data-rv-view="1164" style="background-color: rgb(145, 189, 174); padding-top: 50px; padding-bottom: 50px;">
+<section class="engine"><a href="https://mobirise.ws/b">best web site creator</a></section><section class="mbr-section extMsg-box1 tab-content mbr-after-navbar" id="extMsg-box1-gy" data-rv-view="1178" style="padding-top: 50px; padding-bottom: 50px;">
 
     
     <div class="bgText">
@@ -117,7 +117,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-gz" data-rv-view="1331" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-gz" data-rv-view="1183" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -127,7 +127,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-h0" data-rv-view="1333" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-h0" data-rv-view="1185" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -137,7 +137,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-h1" data-rv-view="1335" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-h1" data-rv-view="1187" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -147,7 +147,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-h2" data-rv-view="1337" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-h2" data-rv-view="1189" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -157,7 +157,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gw" data-rv-view="1160" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gw" data-rv-view="1191" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
