--- a/page53.html
+++ b/page53.html
@@ -39,7 +39,7 @@
 <!-- /Google Analytics -->
 
 
-  <section id="menu-h3" data-rv-view="1683">
+  <section id="menu-h3" data-rv-view="10">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/d">best free website software</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features1-h6" data-rv-view="1688" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.ws/o">best mobile website builder</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features1-h6" data-rv-view="14" style="background-color: rgb(255, 255, 255);">
 
         
 
@@ -83,7 +83,7 @@
                 <div class="card cart-block">
                     <div class="card-img"><img src="assets/images/mbr-1200x788.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Gay-Staright Alliance</h4>
+                        <h4 class="card-title">Gay-Straight Alliance</h4>
                         <h5 class="card-subtitle">Articles by the members of the GSA on GSA topics.</h5>
                         <p class="card-text">Find out more on the GSA here.</p>
                         <div class="card-btn"><a href="page54.html" class="btn btn-danger">MORE</a></div>
@@ -111,7 +111,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-h4" data-rv-view="1684" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-h4" data-rv-view="12" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
