--- a/page22.html
+++ b/page22.html
@@ -39,7 +39,7 @@
 <!-- /Google Analytics -->
 
 
-  <section id="menu-5h" data-rv-view="382">
+  <section id="menu-5h" data-rv-view="392">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/e">best website design software</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-5j" data-rv-view="386" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.ws/d">best web software</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-5j" data-rv-view="396" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -87,7 +87,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5k" data-rv-view="389" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5k" data-rv-view="399" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -97,7 +97,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-5p" data-rv-view="391" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-5p" data-rv-view="401" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -114,7 +114,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5o" data-rv-view="393" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5o" data-rv-view="403" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -124,7 +124,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-5t" data-rv-view="395" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-5t" data-rv-view="405" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -141,7 +141,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5q" data-rv-view="397" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5q" data-rv-view="407" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -151,7 +151,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-5u" data-rv-view="399" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-5u" data-rv-view="409" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -168,7 +168,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5r" data-rv-view="401" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5r" data-rv-view="411" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -178,7 +178,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-5v" data-rv-view="403" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-5v" data-rv-view="413" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -195,7 +195,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5s" data-rv-view="405" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5s" data-rv-view="415" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -205,7 +205,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-5i" data-rv-view="384" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-5i" data-rv-view="394" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
