--- a/page55.html
+++ b/page55.html
@@ -39,7 +39,7 @@
 <!-- /Google Analytics -->
 
 
-  <section id="menu-hb" data-rv-view="1705">
+  <section id="menu-hb" data-rv-view="17">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">mobile website builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-hd" data-rv-view="1707" style="background-image: url(assets/images/mbr-1-1618x1080.jpg); padding-top: 240px; padding-bottom: 240px;">
+<section class="engine"><a href="https://mobirise.ws/j">how to design own website</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-hd" data-rv-view="21" style="background-image: url(assets/images/mbr-1-1618x1080.jpg); padding-top: 240px; padding-bottom: 240px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -83,7 +83,7 @@
               
 
               <div class="mbr-table-cell col-md-5 text-xs-center text-md-right content-size">
-                  <h3 class="mbr-section-title display-2">Christanity and the LGBTQ+ Community</h3>
+                  <h3 class="mbr-section-title display-2">Christianity and the LGBTQ+ Community</h3>
                   <div class="lead">
 
                     <p>How the two relate and how to retain <br>your faith while being open-minded.</p>
@@ -107,7 +107,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-he" data-rv-view="1710" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-he" data-rv-view="24" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -143,7 +143,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-hc" data-rv-view="1706" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-hc" data-rv-view="19" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
