--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/p">open source web page creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="242" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.ws/i">build own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="242" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -91,7 +91,7 @@
                             <h3 class="mbr-section-title display-2">Interview With the New Head of School</h3>
 
                             <div class="mbr-section-text">
-                                <p>Everything you'd like to know about our new head of school.</p>
+                                <p>Everything you'd like to know about our new head of school.<br><br>Written By: Aimee Dastin-van Rijn</p>
                             </div>
 
                             <div class="mbr-section-btn"><a class="btn btn-primary" href="page51.html">MORE</a></div>
@@ -121,12 +121,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/mbr-2-1200x797.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/mbr-1-1618x1080.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Reading Suggestions for the Cold Season</h4>
-                        <h5 class="card-subtitle">Written By: Ilinca Maria Manda</h5>
-                        <p class="card-text">Book recommendations for this Winter.<br><br></p>
-                        <div class="card-btn"><a href="page36.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">Christianity and the LGBTQ+ Community</h4>
+                        <h5 class="card-subtitle">Written By: Miriam Laanemäe</h5>
+                        <p class="card-text">How the two relate and how to retain your faith while being <br>open-minded.<br><br></p>
+                        <div class="card-btn"><a href="page55.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
@@ -134,12 +134,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/opening-810x540-800x533.png" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/mbr-5-1200x800.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">THIMUN</h4>
-                        <h5 class="card-subtitle">Written By: Aimee Dastin-van Rijn</h5>
-                        <p class="card-text">The Hague International Model United Nations: An Incredible Experience<br></p>
-                        <div class="card-btn"><a href="page49.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">And What About <br>the Future?</h4>
+                        <h5 class="card-subtitle">Written By: Ilinca Maria-Manda</h5>
+                        <p class="card-text">An article on finding your way<br></p>
+                        <div class="card-btn"><a href="page52.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
@@ -147,12 +147,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/dsc00119-600x450.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/mbr-1200x801.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Obverse Art Show</h4>
-                        <h5 class="card-subtitle">Written By: Aimee Dastin-van Rijn</h5>
-                        <p class="card-text">An article about the Obverse Art Show and the artists' inspiration.<br></p>
-                        <div class="card-btn"><a href="page47.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">The Unspoken Stresses <br>of the IB</h4>
+                        <h5 class="card-subtitle">Written By: Ceola Daly</h5>
+                        <p class="card-text">An article on the stresses of the IB that no one talks about and how to handle them<br></p>
+                        <div class="card-btn"><a href="page48.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
