--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="68" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.ws/j">design free website</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="68" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -84,17 +84,17 @@
                     <div class="mbr-table-md-up">
                         
                         <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/mbr-1438x1080.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/mbr-1619x1080.jpg"></div>
                         </div>
                         <div class="mbr-table-cell col-md-5 text-xs-center text-md-left content-size">
 
-                            <h3 class="mbr-section-title display-2">Unspoken Stresses <br>of the IB</h3>
+                            <h3 class="mbr-section-title display-2">And What About <br>the Future?</h3>
 
                             <div class="mbr-section-text">
-                                <p>The stresses nobody tells you about.<br><br>By: Ceola Daly</p>
+                                <p>An article on finding your way<br><br>By: Ilinca Maria-Manda</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page48.html">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page52.html">MORE</a></div>
 
                         </div>
 
@@ -117,7 +117,7 @@
         <div class=" row">
             <div class=" col-xs-12">
                 <ol class="carousel-indicators">
-                    <li data-app-prevent-settings="" data-target="#slider2-16" class="active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="3"></li>
+                    <li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider2-16" class="" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="3"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="mbr-section carousel-item dark center active" data-bg-video-slide="false">
@@ -154,13 +154,13 @@
                         <div class="mbr-table-cell">
                             <div class="mbr-overlay"></div>
                             <div class="container-slide">
-                                <img src="assets/images/uk-1170x600.jpg">
+                                <img src="assets/images/mbr-1-1438x1080.jpg">
                                 <div class="row">
                                     <div class="col-md-8 col-md-offset-1">
-                                        <h2 class="mbr-section-title display-2">Applying to the United Kingdom</h2>
-                                        <p class="mbr-section-lead lead">Advice on how to apply to universities in the U.K. </p>
+                                        <h2 class="mbr-section-title display-2">Unspoken Stresses of the IB</h2>
+                                        <p class="mbr-section-lead lead">An article on the stresses of the IB that no one talks about and how to handle them </p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page29.html">See Full Article</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page48.html">See Full Article</a> </div>
                                     </div>
                                 </div>
                             </div>
