--- a/page55.html
+++ b/page55.html
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/j">how to design own website</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-hd" data-rv-view="21" style="background-image: url(assets/images/mbr-1-1618x1080.jpg); padding-top: 240px; padding-bottom: 240px;">
+<section class="engine"><a href="https://mobirise.ws/l">html web builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-hd" data-rv-view="21" style="background-image: url(assets/images/mbr-1-1618x1080.jpg); padding-top: 240px; padding-bottom: 240px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -86,7 +86,7 @@
                   <h3 class="mbr-section-title display-2">Christianity and the LGBTQ+ Community</h3>
                   <div class="lead">
 
-                    <p>How the two relate and how to retain <br>your faith while being open-minded.</p>
+                    <p>How the two relate and how to retain <br>your faith while being open-minded.<br><br>Written By:&nbsp;Miriam Laanemäe</p>
 
                   </div>
 
