--- a/About.html
+++ b/About.html
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/e">best web creation software</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons4-19" data-rv-view="96" style="background-color: rgb(23, 64, 52); padding-top: 90px; padding-bottom: 90px;">
+<section class="engine"><a href="https://mobirise.ws/m">drag and drop site builder</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons4-19" data-rv-view="96" style="background-color: rgb(23, 64, 52); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
@@ -103,7 +103,7 @@
                   <h3 class="mbr-section-title display-2">Aimee Dastin-van Rijn</h3>
                   <div class="lead">
 
-                    <p>Aimee is the founder and website desgner of The Lion's Tale. She is also a writer for the paper, as well as the Editor in Chief.&nbsp;<br><br>Articles Written:<br>- The 2017-2018 Guide to St. John's<br>- My Icelandic Boyfriend<br>- High School New Student Orientation<br>- Bye Bye Birdie<br>- Green and White Day<br>- The True Story of Conrad Birdie<br>- Winter Art Vernissage<br>- A-Z Guide to St. John's for the Holidays</p>
+                    <p>Aimee is the founder and website desgner of The Lion's Tale. She is also a writer for the paper, as well as the Editor in Chief.&nbsp;<br><br>Articles Written:<br>- The 2017-2018 Guide to St. John's<br>- My Icelandic Boyfriend<br>- High School New Student Orientation<br>- Bye Bye Birdie<br>- Green and White Day<br>- The True Story of Conrad Birdie<br>- Winter Art Vernissage<br>- A-Z Guide to St. John's for the Holidays<br>- Obverse Art Show<br>- THIMUN<br>- Interview With the New Head of School</p>
 
                   </div>
 
@@ -239,7 +239,7 @@
                   <h3 class="mbr-section-title display-2">Camille Kummer</h3>
                   <div class="lead">
 
-                    <p>Camille is a writer for the paper, as well as the head of the Miscellaneous Section.<br><br>Articles Written:<br>- The Story About Maps</p>
+                    <p>Camille is a writer for the paper, as well as the head of the Miscellaneous Section.<br><br>Articles Written:<br>- The Story About Maps<br>- The Downside of the Fat-Acceptance Movement</p>
 
                   </div>
 
@@ -336,7 +336,7 @@
                   <h3 class="mbr-section-title display-2">Ceola Daly</h3>
                   <div class="lead">
 
-                    <p>Ceola is a writer for the paper.<br><br>Articles Written:<br>- Lucky to be Lions<br>- Some Horoscopes</p>
+                    <p>Ceola is a writer for the paper.<br><br>Articles Written:<br>- Lucky to be Lions<br>- Some Horoscopes<br>- Unsoken Stresses of the IB</p>
 
                   </div>
 
@@ -472,7 +472,7 @@
                   <h3 class="mbr-section-title display-2">Ilinca Maria-Manda</h3>
                   <div class="lead">
 
-                    <p>Ilinca is a writer for the paper.<br><br>Articles Written:<br>- St. John's for a Newcomer<br>- Reading Suggestions for the Cold Season</p>
+                    <p>Ilinca is a writer for the paper.<br><br>Articles Written:<br>- St. John's for a Newcomer<br>- Reading Suggestions for the Cold Season<br>- And What About the Future?</p>
 
                   </div>
 
