--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/f">simple site maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="68" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.ws/f">easy site creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="68" style="background-color: rgb(23, 64, 52);">
 
     
 
