--- a/page26.html
+++ b/page26.html
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/i">how to build free website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-7g" data-rv-view="700" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.ws/i">build your own website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-7g" data-rv-view="700" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
