--- a/About.html
+++ b/About.html
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/m">drag and drop web builder</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons4-19" data-rv-view="385" style="background-color: rgb(23, 64, 52); padding-top: 90px; padding-bottom: 90px;">
+<section class="engine"><a href="https://mobirise.ws/f">simple web maker</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons4-19" data-rv-view="385" style="background-color: rgb(23, 64, 52); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
@@ -102,7 +102,7 @@
                   <h3 class="mbr-section-title display-2">Aimee Dastin-van Rijn</h3>
                   <div class="lead">
 
-                    <p>Aimee is the founder and website designer of The Lion's Tale. She is also a writer for the paper, as well as the Editor in Chief.&nbsp;<br><br>Articles Written:<br>- The 2017-2018 Guide to St. John's<br>- My Icelandic Boyfriend<br>- High School New Student Orientation<br>- Bye Bye Birdie<br>- Green and White Day<br>- The True Story of Conrad Birdie<br>- Winter Art Vernissage<br>- A-Z Guide to St. John's for the Holidays<br>- Obverse Art Show<br>- THIMUN<br>- Interview With the New Head of School</p>
+                    <p>Aimee is the founder and website designer of The Lion's Tale. She is also a writer for the paper, the quiz maker, as well as the Editor in Chief.&nbsp;<br><br>Articles Written:<br>- The 2017-2018 Guide to St. John's<br>- My Icelandic Boyfriend<br>- High School New Student Orientation<br>- Bye Bye Birdie<br>- Green and White Day<br>- The True Story of Conrad Birdie<br>- Winter Art Vernissage<br>- A-Z Guide to St. John's for the Holidays<br>- Obverse Art Show<br>- THIMUN<br>- Interview With the New Head of School<br>- St. John's Fashion Shoot</p>
 
                   </div>
 
@@ -471,7 +471,7 @@
                   <h3 class="mbr-section-title display-2">Ilinca Maria-Manda</h3>
                   <div class="lead">
 
-                    <p>Ilinca is a writer for the paper.<br><br>Articles Written:<br>- St. John's for a Newcomer<br>- Reading Suggestions for the Cold Season<br>- And What About the Future?</p>
+                    <p>Ilinca is a writer for the paper.<br><br>Articles Written:<br>- St. John's for a Newcomer<br>- Reading Suggestions for the Cold Season<br>- And What About the Future?<br>- Reading Suggestions for the Summer Season</p>
 
                   </div>
 
