--- a/page35.html
+++ b/page35.html
@@ -65,7 +65,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CENTSADAY">
 
-                        <input type="hidden" value="FF/H5ndA9LGs99i7t+Od68nRdedEwmpnz3e++e2G2VcwuLdWEZgBPNSmwcDqIHQWawyrP4pqhXOjCpti9wl9810ZVSyzll5+ZrurMrCaAkTz2/gcAaGAj3ZwHLI+K9QW" data-form-email="true">
+                        <input type="hidden" value="QunwefVp5WXdjpEANKEJDja+Qjy07lBhAdSKUeyuEP+ZDDsw1T3nQfeqMBkqmwzXpFeTPIYKknO7BiAnZcwqAaUGeQJyg7JOYSQNfHEH9JEdra+Iw52mrt4FZzKn8M7s" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -106,7 +106,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/k">develop your own website</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-br" data-rv-view="909" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-br" data-rv-view="909" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
